<resources>
    <string name="app_name">proximty</string>
    <string name="gps_network_not_enabled">Kindly Enable GPS to continue</string>
    <string name="open_location_settings">Goto Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="gps_network_not_enabled_title">GPS Disabled</string>


    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="pseudo">Pseudo</string>
    <string name="confirme_password">Confirme password</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>

    <string name="onboardingWelcomeContent">Activer votre wifi et scanner les personnes avec qui vous partager les memes centres d\'interets </string>
    <string name="onboardingSpinWinContent">Echanger avec les personnes ayant accepter de faire votre connaissance. </string>
    <string name="onboardingRecommenderContent">Consulter leurs profils anonyme et envoyer les une demande de mise en rélation</string>
    <string name="onboarding_welcome_3">Discussion instantanée</string>
    <string name="onboarding_welcome_2">Profil anonyme</string>
    <string name="onboarding_welcome_1">Scanner</string>
    <string name="title_activity_users">UsersActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="share_now">Share Now</string>
    <string name="android_application_developer">Android Application Developer</string>
    <string name="android_app_developers">Android App Developers</string>
    <string name="java_kotlin">Java | Kotlin</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="developers">Developers</string>
    <string name="share">Share</string>
    <string name="show_bottom_sheet_dialog">Show Bottom Sheet Dialog</string>
    <string name="rating">Rating:</string>


</resources>