<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/loginHeader"
        android:text="Register"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/loginViewsMargin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pseudo"
        android:inputType="text"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_pseudo_su"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputFirsrName"
        android:layout_marginTop="@dimen/loginViewsMargin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstName"
        android:inputType="phone"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLastName"
        android:layout_marginTop="@dimen/loginViewsMargin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastName"
        android:inputType="text"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/loginViewsMargin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/loginViewsMargin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirme_password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_cpassword_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/cirLoginButton"
        style="@style/loginButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Signup"
        app:backgroundTint="@null"
        android:background="@drawable/login_button_bk"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:onClick="register"/>




    <TextView
        style="@style/parent"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:text="@string/login_signup_hint"
        android:onClick="sigINButton"
        android:layout_marginTop="@dimen/loginViewsMargin"/>



</LinearLayout>